Add generic measures links and routes

--- a/client/index.html
+++ b/client/index.html
@@ -28,6 +28,8 @@
       <link rel="stylesheet" href="app/coverage/routes/keyRiskAreaInfo/keyRiskAreaInfo.css">
       <link rel="stylesheet" href="app/coverage/routes/keyRiskAreaLandscape/keyRiskAreaLandscape.css">
       <link rel="stylesheet" href="app/coverage/routes/keyRiskAreaTable/keyRiskAreaTable.css">
+      <link rel="stylesheet" href="app/coverage/routes/measureInfo/measureInfo.css">
+      <link rel="stylesheet" href="app/coverage/routes/measureTable/measureTable.css">
       <link rel="stylesheet" href="app/coverage/routes/productSegmentCompare/productSegmentCompare.css">
       <link rel="stylesheet" href="app/coverage/routes/productSegmentInfo/productSegmentInfo.css">
       <link rel="stylesheet" href="app/coverage/routes/productSegmentTable/productSegmentTable.css">
@@ -194,7 +196,7 @@
       <!-- injector:js -->
       <script src="components/c3chart/c3chart.module.js"></script>
       <script src="components/util/util.module.js"></script>
-      <script src="app/dataflow/routes/datasourceInfo/datasourceInfo.controller.js"></script>
+      <script src="app/dataflow/routes/dataflowGraph/dataflowGraph.controller.js"></script>
       <script src="app/amx/providers/Lookup/Lookup.service.js"></script>
       <script src="app/amx/routes/lookupTables/lookupTables.controller.js"></script>
       <script src="app/amx/routes/lookupTables/lookupTables.js"></script>
@@ -210,6 +212,10 @@
       <script src="app/coverage/routes/keyRiskAreaLandscape/keyRiskAreaLandscape.js"></script>
       <script src="app/coverage/routes/keyRiskAreaTable/keyRiskAreaTable.controller.js"></script>
       <script src="app/coverage/routes/keyRiskAreaTable/keyRiskAreaTable.js"></script>
+      <script src="app/coverage/routes/measureInfo/measureInfo.controller.js"></script>
+      <script src="app/coverage/routes/measureInfo/measureInfo.js"></script>
+      <script src="app/coverage/routes/measureTable/measureTable.controller.js"></script>
+      <script src="app/coverage/routes/measureTable/measureTable.js"></script>
       <script src="app/coverage/routes/productSegmentCompare/productSegmentCompare.controller.js"></script>
       <script src="app/coverage/routes/productSegmentCompare/productSegmentCompare.js"></script>
       <script src="app/coverage/routes/productSegmentInfo/productSegmentInfo.controller.js"></script>
@@ -226,9 +232,9 @@
       <script src="app/coverage/routes/riskTable/riskTable.js"></script>
       <script src="app/dataflow/directives/directedGraph/directedGraph.directive.js"></script>
       <script src="app/dataflow/providers/dflLinkDatasourceModal/dflLinkDatasourceModal.service.js"></script>
-      <script src="app/dataflow/routes/dataflowGraph/dataflowGraph.controller.js"></script>
-      <script src="app/dataflow/routes/dataflowGraph/dataflowGraph.js"></script>
       <script src="app/amx/filters/filters.js"></script>
+      <script src="app/dataflow/routes/dataflowGraph/dataflowGraph.js"></script>
+      <script src="app/dataflow/routes/datasourceInfo/datasourceInfo.controller.js"></script>
       <script src="app/dataflow/routes/datasourceInfo/datasourceInfo.js"></script>
       <script src="app/dataflow/routes/datasourceTable/datasourceTable.controller.js"></script>
       <script src="app/dataflow/routes/datasourceTable/datasourceTable.js"></script>
